Refactoring Adding "update photo" function Replaced Loading screen

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "React_SocialNetwork",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://mordvintsevmv.github.io/React_SocialNetwork",
